[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# tell the build system where the package source files are
packages = ["device_utility"]

[project]
name = "device-utility"
version = "0.0.1"
authors = [
  { name="Jörn Eggersglüß", email="joern.eggersgluess@gmail.com" },
]
description = "RealSense Device Utility"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "pyrealsense2"
]
